--- a/makingUp.html
+++ b/makingUp.html
@@ -9,7 +9,7 @@
     <meta content="telephone=no,email=no" name=format-detection />
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no" />
 
-    <title>倒计时小组件隐私政策</title>
+    <title>凹凹啦查妆隐私政策</title>
     <style type="text/css">
     html{font-size:10px;}body{padding:0;margin:0;}ul,li{list-style:none;margin:0;padding:0;}h1,h2,h3,h4,h5,p{margin:0;}img{border:0;}input,img{vertical-align:middle;}a{color:inherit;text-decoration:none;}span,div,p,b,i{margin:0;padding:0;}img{-webkit-user-select:none;-webkit-touch-callout:none;}*{-webkit-tap-highlight-color:rgba(0,0,0,0);}.clearfix:before,.clearfix:after{display:table;content:"";line-height:0;}.clearfix:after{clear:both;}.c_pic .img{-webkit-transform:translateY(-50%) scaleY(1.02) !important;-moz-transform:translateY(-50%) scaleY(1.02) !important;-o-transform:translateY(-50%) scaleY(1.02) !important;-ms-transform:translateY(-50%) scaleY(1.02) !important;transform:translateY(-50%) scaleY(1.02) !important;}a,img{-webkit-touch-callout:none;}input[readonly="readonly"]{background-color:#eee;}iframe.c_cookie_map{height:0;position:absolute;top:0;width:0;z-index:-1;}body{background-color:#F2F2F2;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif,"寰蒋闆呴粦";font-size:14px;margin:0;padding:0;}.c_cookie_map{height:0;position:absolute;visibility:hidden;width:0;}.btn,button{outline:none !important;}.btn[disabled=disabled],button[disabled=disabled]{background-color:#eee;}.btn[disabled=disabled]:hover,button[disabled=disabled]:hover{background-color:#ddd;}.c_pic{background:#eeeeee url('//codoon-img3.b0.upaiyun.com/cdmall9880933441460..name!80m80') no-repeat center center;background-size:40px 40px;}.price{color:#f66315;font-size:14px;font-family:arial;}.mprice{color:#aeaeae;font-size:11px;font-family:arial;text-decoration:line-through;}.rt_cont img{background:#fff url(//codoon-img3.b0.upaiyun.com/cdmall9880933441460..name!80m80)no-repeat center center;background-size:40px 40px;display:block;margin:0 auto;width:100%;}@-webkit-keyframes loading_bubble{100%{width:30px;}80%{width:25px;}60%{width:20px;}40%{width:15px;}20%{width:10px;}0%{width:5px;}}@keyframes loading_bubble{100%{width:30px;}80%{width:25px;}60%{width:20px;}40%{width:15px;}20%{width:10px;}0%{width:5px;}}.loading{color:#aaa;display:none;font-size:12px;height:44px;line-height:44px;margin:0 auto;text-align:center;width:68px;}.loading.active{display:block;}.loading span{float:left;}.loading sup{display:-webkit-box;font-size:18px;line-height:inherit;overflow:hidden;position:relative;top:-0.2em;-webkit-animation:loading_bubble 2s infinite linear;}@-webkit-keyframes maskDonut{0%{-webkit-transform:rotate(0);}100%{-webkit-transform:rotate(360deg);}}@-moz-keyframes maskDonut{0%{-moz-transform:rotate(0);}100%{-moz-transform:rotate(360deg);}}@-o-keyframes maskDonut{0%{-o-transform:rotate(0);}100%{-o-transform:rotate(360deg);}}@keyframes maskDonut{0%{-webkit-transform:rotate(0);-moz-transform:rotate(0);-ms-transform:rotate(0);transform:rotate(0);}100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}.mask_loading{background:rgba(0,0,0,0.4);-webkit-border-radius:8px;-webkit-background-clip:padding-box;-moz-border-radius:8px;-moz-background-clip:padding;border-radius:8px;background-clip:padding-box;height:32px;left:50%;opacity:0;pointer-events:none;position:fixed;top:50%;width:32px;-webkit-user-select:none;z-index:9;-webkit-transform:translate(-50%,-50%);-moz-transform:translate(-50%,-50%);-o-transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%);transform:translate(-50%,-50%);-webkit-transition:opacity 0.2s linear;-moz-transition:opacity 0.2s linear;-o-transition:opacity 0.2s linear;transition:opacity 0.2s linear;}.mask_loading.active{opacity:1;}.mask_loading:after{content:'';background:url('//xmall.codoon.com/statics/loading.png') no-repeat center;background-size:28px 28px;display:block;height:28px;margin:2px;width:28px;-webkit-animation:maskDonut 0.5s infinite linear;-moz-animation:maskDonut 0.5s infinite linear;-o-animation:maskDonut 0.5s infinite linear;animation:maskDonut 0.5s infinite linear;}
       .rt_an .rtt_ts{position:fixed}.rt_an .rtt_w{padding-top:48px}.rtt_w{background-color:#fff;overflow:hidden;padding:6px}.rtt_w *{max-width:100%}.rtt_ts{background-color:#fff;border-bottom:1px solid #eee;color:#7c7c83;display:-webkit-flex;font-size:13px;position:-webkit-sticky;position:sticky;top:-1px;width:100%;z-index:5}.rtt_t{border-right:1px solid #eee;float:left;-webkit-flex:50% 1;line-height:30px;padding:6px 0;position:relative;text-align:center;width:50%;transition:all .4s;-webkit-transition:all .4s}.rtt_t:last-child{border-right:none}.rtt_t.active{color:#2aba66;font-weight:600}.rtt_t.active:after{content:'';background-color:#2aba66;bottom:-1px;height:2px;left:10%;position:absolute;width:80%}.rtt_t span{pointer-events:none}
@@ -27,15 +27,15 @@
                 <span style=color:#262626;font-size:14px>
                   <br></span>
               </p>
-              <p align="center"><span style=color:#262626;font-size:18px><strong>倒计时小组件隐私政策</strong></span></p>
+              <p align="center"><span style=color:#262626;font-size:18px><strong>凹凹啦查妆隐私政策</strong></span></p>
               <p>
                 <span style=color:#262626;font-size:14px>&nbsp;</span></p>
               <p>
-                <span style=color:#262626;font-size:14px>欢迎您使用倒计时小组件提供的产品、技术与服务！</span></p>
+                <span style=color:#262626;font-size:14px>欢迎您使用凹凹啦查妆提供的产品、技术与服务！</span></p>
               <p>
                 <span style=color:#262626;font-size:14px>&nbsp;</span></p>
               <p>
-                <span style=color:#262626;font-size:14px>我们（“倒计时小组件”）深知个人信息对您的重要性，因此，我们将以高度重视、严谨审慎的态度对待及处理您的隐私及个人信息保护事宜。我们将严格遵守法律法规的规定，遵循隐私保护原则，为您提供安全、可靠的服务。</span></p>
+                <span style=color:#262626;font-size:14px>我们（“凹凹啦查妆”）深知个人信息对您的重要性，因此，我们将以高度重视、严谨审慎的态度对待及处理您的隐私及个人信息保护事宜。我们将严格遵守法律法规的规定，遵循隐私保护原则，为您提供安全、可靠的服务。</span></p>
               <p>
                 <span style=color:#262626;font-size:14px>&nbsp;</span></p>
               <p>
@@ -53,7 +53,7 @@
                   <span style=color:#262626;font-size:14px>一、我们收集哪些信息以及如何收集</span></strong>
               </p>
               <p>
-                <span style=color:#262626;font-size:14px>您使用倒计时小组件时无需注册、登录任何账号，同时也无需登陆其他第三方服务。您在下载、安装、启动、浏览、使用我们的产品、技术及/或服务（以下统称“使用我们的产品、技术及/或服务”）时，我们不会上传、发布您的个人隐私及账号信息。为了向您提供更稳定、优质的服务，我们将根据您使用的服务，收集和/或使用您的以下非敏感信息：</span></p>
+                <span style=color:#262626;font-size:14px>您使用凹凹啦查妆时无需注册、登录任何账号，同时也无需登陆其他第三方服务。您在下载、安装、启动、浏览、使用我们的产品、技术及/或服务（以下统称“使用我们的产品、技术及/或服务”）时，我们不会上传、发布您的个人隐私及账号信息。为了向您提供更稳定、优质的服务，我们将根据您使用的服务，收集和/或使用您的以下非敏感信息：</span></p>
               <p>
                 <span style=color:#262626;font-size:14px>&nbsp;</span></p>
               <p>
@@ -65,9 +65,9 @@
                   <span style=color:#262626;font-size:14px>二、我们需要的权限及取消路径</span></strong>
               </p>
               <p>
-                <span style=color:#262626;font-size:14px>1.无线网络访问权限：为了给用户提供更好的服务，倒计时小组件需要用户授权开启无线网络访问权限，目的是为了加载用户感兴趣的文字、图像及声音内容。</span></p>
+                <span style=color:#262626;font-size:14px>1.无线网络访问权限：为了给用户提供更好的服务，凹凹啦查妆需要用户授权开启无线网络访问权限，目的是为了加载用户感兴趣的文字、图像及声音内容。</span></p>
               <p>
-                <span style=color:#262626;font-size:14px>2.取消路径：对于上文提及的针对特定业务场景的权限，您可以随时通过相关功能设置开启/取消该权限的授权。当前权限开启路径为：（1）在您申请使用某项业务功能时，向您弹出授权询问页面，您确认后开启该项权限；（2）您自行进入设备的隐私及权限管理页面，开启相应权限。拒绝授权、取消授权或关闭权限的路径为：（1）在您申请使用某项业务功能时，您不予确认授权询问页面；（2）您自行进入设备的隐私及权限管理页面，将已经授权的权限进行关闭。就具体路径而言，IOS系统默认的权限设置路径为：设置—应用列表—倒计时小组件，找到倒计时小组件应用后点击进入应用信息页面，可以在信息页查看倒计时小组件目前开启的权限，可以选择关闭任意一个权限。</span></p>
+                <span style=color:#262626;font-size:14px>2.取消路径：对于上文提及的针对特定业务场景的权限，您可以随时通过相关功能设置开启/取消该权限的授权。当前权限开启路径为：（1）在您申请使用某项业务功能时，向您弹出授权询问页面，您确认后开启该项权限；（2）您自行进入设备的隐私及权限管理页面，开启相应权限。拒绝授权、取消授权或关闭权限的路径为：（1）在您申请使用某项业务功能时，您不予确认授权询问页面；（2）您自行进入设备的隐私及权限管理页面，将已经授权的权限进行关闭。就具体路径而言，IOS系统默认的权限设置路径为：设置—应用列表—凹凹啦查妆，找到凹凹啦查妆应用后点击进入应用信息页面，可以在信息页查看凹凹啦查妆目前开启的权限，可以选择关闭任意一个权限。</span></p>
               <p>
                 <span style=color:#262626;font-size:14px>再次地，您理解并同意，您开启该权限即视为您授权我们可以访问、获取、使用您的该等个人信息；但当您取消该授权后，我们将不再访问该信息，也无法再为您提供上述与之对应的服务。</span></p>
               <p>
@@ -87,7 +87,7 @@
               </p>
               <p>
                 <span style=color:#262626;font-size:14px>
-                  <span style=color:#262626;font-size:14px>为了给您提供更好的服务，我们可能根据产品、技术及/或服务的更新情况及法律法规的相关要求，适时更新或修订本政策内容，该等更新构成本政策的一部分。如果该等更新或修订会导致您在本政策项下权利的实质减少的，我们将在该等更新或修订内容生效前，通过在页面的显著位置提示、向您发送推送消息或以其他方式通知您。在该种情况下，若您使用或继续使用我们的产品、技术与服务，即表示您已理解并同意受更新或修订后的隐私政策约束；如您不同意的，需立即停止访问或使用我们的产品、技术与服务。为保障您的合法权益，我们鼓励您在每次使用我们的产品或服务时都查阅我们的《隐私政策》，并建议您定期在我们平台的设置页面中查看本政策。在没有更新版本的《倒计时小组件隐私政策》发布的情况下，本政策在我们为您提供产品、技术和/或服务期间长期有效。</span></p>
+                  <span style=color:#262626;font-size:14px>为了给您提供更好的服务，我们可能根据产品、技术及/或服务的更新情况及法律法规的相关要求，适时更新或修订本政策内容，该等更新构成本政策的一部分。如果该等更新或修订会导致您在本政策项下权利的实质减少的，我们将在该等更新或修订内容生效前，通过在页面的显著位置提示、向您发送推送消息或以其他方式通知您。在该种情况下，若您使用或继续使用我们的产品、技术与服务，即表示您已理解并同意受更新或修订后的隐私政策约束；如您不同意的，需立即停止访问或使用我们的产品、技术与服务。为保障您的合法权益，我们鼓励您在每次使用我们的产品或服务时都查阅我们的《隐私政策》，并建议您定期在我们平台的设置页面中查看本政策。在没有更新版本的《凹凹啦查妆隐私政策》发布的情况下，本政策在我们为您提供产品、技术和/或服务期间长期有效。</span></p>
               <p>
                 <span style=color:#262626;font-size:14px>&nbsp;</span></p>
               <p>
@@ -97,7 +97,7 @@
               <p>
                 <span style=color:#262626;font-size:14px>如您对本协议或使用我方平台服务的过程中有任何问题（包括问题咨询、投诉等），我们为您提供了反馈通道，希望为您提供满意的解决方案：</span></p>
               <p>
-                <span style=color:#262626;font-size:14px>您可以通过客服邮箱与我们联系，邮箱为：dcd990@126.com。</span></p>
+                <span style=color:#262626;font-size:14px>您可以通过客服邮箱与我们联系，邮箱为：nxh177@126.com。</span></p>
               <p>
                 <span style=color:#262626;font-size:14px>&nbsp;</span></p>
               <p>
